#pragma once
class NumberCard
{
};

