#pragma once
class SpecialCard
{
};

