#pragma once
class DiscardStack
{
};

