#pragma once
class Hand
{

};

