#pragma once
class BotPlayer
{
};

