#pragma once
class HumanPlayer
{
};

