#pragma once
#include <iostream>

class Service
{
public:
	virtual void Init();
};

